<resources>
    <string name="app_name">Kekomo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="activity_calendar">Calendario</string>
    <string name="activity_new_dish">Nuevo plato</string>
    <string name="save_dish">Guardar plato</string>
    <string name="activity_my_dishes">Mis platos</string>
    <string name="ask_image">¿De donde quieres la foto?</string>
    <string name="camera">Cámara</string>
    <string name="gallery">Galería</string>
    <string name="not_events">No hay nada planificado para esta fecha.</string>
    <string name="que_como">¿Que como hoy?</string>
    <string name="que_ceno">¿Que ceno hoy?</string>
    <string name="activity_galery">Galería</string>
    <string name="own_gallery">Kekomo</string>
    <string name="delete">Eliminar</string>
    <string name="preparation">Preparación</string>
    <string name="dishes_empty">Todavia no tienes ningun plato en tu lista.\n¡Añade uno!</string>
    <string name="activity_dish_detail">Detalles del plato</string>
    <string name="description">Descripción</string>
    <string name="edit_dish">Editar plato</string>
    <string name="activity_pantry">Despensa</string>
    <string name="frozen">Congelado</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Añadir</string>
    <string name="add_ingredient">Añadir ingrediente</string>
    <string name="ingredients">Ingredientes</string>
  <string name="transitionName">transitionName</string>
  <string name="lunch">Comida</string>
  <string name="dinner">Cena</string>
  <string name="not_event_help">¿Quieres que te ayudemos a pensar algo para comer?</string>
    <string name="planing_lunch">Planificar Comida</string>
    <string name="planing_dinner">Planificar Cena</string>
  <string name="delete_event">Eliminar</string>
    <string name="product_name">Nombre del producto</string>
</resources>
