<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/empty"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  android:layout_centerInParent="true"
  android:orientation="vertical"
  android:gravity="center">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/not_events"
    android:textColor="@color/secondary_text"
    android:gravity="center"
    android:padding="25dp"/>

  <View
    android:layout_width="100dp"
    android:layout_height="1dp"
    android:background="@color/colorPrimary"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/not_event_help"
    android:textColor="@color/secondary_text"
    android:gravity="center"
    android:paddingTop="25dp"
    android:paddingBottom="25dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"/>

  <Button
    android:id="@+id/planing_lunch_empty"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/planing_lunch"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:textColor="@color/colorAccentDark"
    android:background="@drawable/background_white_corners_stroke"
    android:layout_marginBottom="25dp"/>

  <Button
    android:id="@+id/planing_dinner_empty"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/planing_dinner"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:textColor="@color/colorAccentDark"
    android:background="@drawable/background_white_corners_stroke"
    android:layout_marginBottom="25dp"/>

</LinearLayout>