<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include android:id="@+id/empty"
            android:visibility="gone"
            layout="@layout/calendar_day_detail_empty"/>

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            android:gravity="center"
            android:background="@color/white"
            android:padding="16dp">

          <Button
            android:id="@+id/planing_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planing_lunch"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/colorAccentDark"
            android:background="@drawable/background_white_corners_stroke"
            android:layout_marginBottom="25dp"
            android:visibility="visible"/>

          <LinearLayout
            android:id="@+id/lunch_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <com.bsalazar.kekomo.general.CustomTextViewBellerose
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/lunch"
              android:textSize="22sp"
              android:textColor="@color/colorPrimaryMoreDark"/>

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/colorAccent"/>

            <TextView
              android:id="@+id/lunch"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:textColor="@color/primary_text"
              android:textStyle="bold"
              android:paddingTop="10dp"
              tools:text="Filete con patatas"/>

            <TextView
              android:id="@+id/lunch_description"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:textColor="@color/primary_text"
              android:paddingTop="10dp"
              tools:text="La descripción del filete con patatas"/>

            <TextView
              android:id="@+id/delete_lunch_event"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:background="?android:selectableItemBackgroundBorderless"
              android:textColor="@color/colorAccentLight"
              android:padding="10dp"
              android:text="@string/delete_event"/>

          </LinearLayout>

          <Button
            android:id="@+id/planing_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planing_dinner"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/colorAccentDark"
            android:background="@drawable/background_white_corners_stroke"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:visibility="visible"/>

          <LinearLayout
            android:id="@+id/dinner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:visibility="gone"
            tools:visibility="visible">

            <com.bsalazar.kekomo.general.CustomTextViewBellerose
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/dinner"
              android:textSize="22sp"
              android:textColor="@color/colorPrimaryMoreDark"/>

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/colorAccent"/>

            <TextView
              android:id="@+id/dinner"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:textColor="@color/primary_text"
              android:textStyle="bold"
              android:paddingTop="10dp"
              tools:text="Filete con patatas"/>

            <TextView
              android:id="@+id/dinner_description"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:textColor="@color/primary_text"
              android:paddingTop="10dp"
              tools:text="La descripción del filete con patatas"/>

            <TextView
              android:id="@+id/delete_dinner_event"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:background="?android:selectableItemBackgroundBorderless"
              android:textColor="@color/colorAccentLight"
              android:padding="10dp"
              android:text="@string/delete_event"/>

          </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>