<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="30dp"
                android:src="@drawable/picture_green"
                android:background="@color/colorAccentExtraLight"/>

            <ImageView
                android:id="@+id/dish_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/edit_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/edit"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"/>

            <LinearLayout
                android:id="@+id/edit_image_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal"
                android:background="@drawable/background_white_round"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:visibility="invisible">

                <LinearLayout
                    android:id="@+id/camera_button"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/camera2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/charcoal_gray"
                        android:text="@string/camera"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gallery_button"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="?android:selectableItemBackground"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/gallery2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/charcoal_gray"
                        android:text="@string/gallery"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/kekomo_galley_button"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/kekomo_gallery"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textColor="@color/charcoal_gray"
                        android:text="@string/own_gallery"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/delete_image"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/delete"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/charcoal_gray"
                        android:text="@string/delete"/>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/dish_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:hint="Nombre del plato"
                android:imeOptions="actionNext"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/dish_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:hint="Descripción"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>